# discord-bots

./: README.md
balls/: .gitignore  README.md  package-lock.json  package.json
balls/ballslua/: Makefile
balls/ballslua/src/: CMakeLists.txt  ballslua.c  ballslua_eval.c
balls/ballsrender/: Camera.cpp  Camera.h  Color3.h  Color4.h  ImageData.h  Makefile  MathUtils.h  Matrix4.h  Node.cpp  Node.h  Object.h  PRInstance.h  Rect.h  TexCoord.h  Vector2.h  Vector3.h
balls/ballsrender/LESSR/: CMakeLists.txt  LICENSE  README.md
balls/ballsrender/LESSR/include/LESSR/: Color3.h  Color4.h  Context.h  DefaultProgram.h  Enums.h  ImageData.h  LuaLib.h  LuaProgram.h  MathUtils.h  Matrix4.h  Program.h  ShaderContext.h  Vector2.h  Vector3.h  Vector4.h  VertexAttribute.h
balls/ballsrender/LESSR/src/: CMakeLists.txt  Color3.cpp  Color4.cpp  Context.cpp  DefaultProgram.cpp  LuaLib.cpp  LuaProgram.cpp  LuaUtils.h  Matrix4.cpp  Program.cpp  ShaderContext.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
balls/ballsrender/LESSR/tests/: CMakeLists.txt  LuaShaders.cpp  Suzanne.cpp  Suzanne.h  Tetrahedron.cpp  Triangle.cpp
balls/src/: Bot.ts  index.ts  main.ts
balls/src/commands/: AddAudio.ts  AddCommand.ts  AddText.ts  AutoScale.ts  Avatar.ts  Banner.ts  BlankImage.ts  Crop.ts  Cut.ts  Echo.ts  HStretch.ts  MediaInfo.ts  Meme.ts  MixAudio.ts  Overlay.ts  Pad.ts  Pixelate.ts  RemoveCommand.ts  Resize.ts  ServerBanner.ts  ServerIcon.ts  ServerSplash.ts  Stats.ts  Stretch.ts  Tasks.ts  ToGif.ts  ToJpeg.ts  ToMp3.ts  ToMp4.ts  TwitterVideo.ts  VStretch.ts  Vibrato.ts  _export.ts  index.ts
balls/src/core/: ChildProcess.ts  Command.ts  CommandParser.ts  Constants.ts  (+10 more)
obamacoin/: .gitignore  Aptfile  README.md  index.js  package.json  psWatch.js  version.js
obamacoin/assets/: how.m4a
obamacoin/commands/: addaudio.js  arabfunny.js  avatar.js  avs4you.js  aylat.js  bandicam.js  ben.js  bonzi.js  boomerang.js  comedynecrophilia.js  crunch.js  demoman.js  engineer.js  enlarge.js  fisheye.js  gjpeg.js  glados.js  goodbyemom.js  heavy.js  hmerge.js  how.js  hshrink.js  hstack.js  hstretch.js  hypercam.js  img.js  inspire.js  invert.js  invite.js  jpeg.js  kinemaster.js  lua.js  magik.js  medic.js  melt.js  meme.js  meme2.js  meme3.js  michiru.js  mike.js  (+41 more)
obamacoin/web/: changelog.html  commands.ejs  common.css  common.js  index.html
(+31 files in other folders)
